# brain-node

./: .gitignore  README.md  pyproject.toml
brain_node/: __init__.py  audio_buffer.py  audio_service.py  audio_transcription.py  cli.py  logging_config.py  sound_localization.py  visualization.py  websocket_service.py
